deploy/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow
  namespace: bdp-airflow
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: airflow-webserver
